org/uacalc/fol/grammar/FOParser.java
/* FOParser.java */
/* Generated By:JavaCC: Do not edit this line. FOParser.java */
package org.uacalc.fol.grammar;

import java.io.StringReader;

import org.uacalc.fol.Conjunction;
import org.uacalc.fol.Disjunction;
import org.uacalc.fol.EquationFormula;
import org.uacalc.fol.Exists;
import org.uacalc.fol.FOFormula;
import org.uacalc.fol.ForAll;
import org.uacalc.fol.Implication;
import org.uacalc.fol.Negation;
import org.uacalc.fol.Sentence;
import org.uacalc.terms.Terms;
import org.uacalc.terms.Variable;
import org.uacalc.terms.VariableImp;

public class FOParser implements FOParserConstants {

  public static FOFormula parseFormula(String s) throws ParseException {
    FOParser p = new FOParser(new StringReader(s));
    FOFormula f = p.Formula();
    Token t = p.getNextToken();
    if (t.kind != EOF) {
      throw new ParseException("Unexpected trailing input: " + t.image);
    }
    return f;
  }

  public static Sentence parseSentence(String s) throws ParseException {
    return new Sentence(parseFormula(s));
  }

  private EquationFormula makeEquationFormula(String s) throws ParseException {
    if (s == null) {
      throw new ParseException("Null atomic formula");
    }

    s = s.trim();
    if (s.length() == 0) {
      throw new ParseException("Empty atomic formula");
    }

    int eq = findTopLevelEquals(s);
    if (eq < 0) {
      throw new ParseException("Expected '=' in atomic formula: " + s);
    }

    String left = s.substring(0, eq).trim();
    String right = s.substring(eq + 1).trim();

    if (left.length() == 0 || right.length() == 0) {
      throw new ParseException("Bad equation: " + s);
    }

    try {
      return new EquationFormula(
          Terms.stringToTerm(left),
          Terms.stringToTerm(right)
      );
    }
    catch (IllegalArgumentException e) {
      throw new ParseException("Bad term in equation: " + s);
    }
  }

  private int findTopLevelEquals(String s) throws ParseException {
    int depth = 0;
    int pos = -1;

    for (int i = 0; i < s.length(); i++) {
      char c = s.charAt(i);

      if (c == '(') depth++;
      else if (c == ')') depth--;
      else if (c == '=' && depth == 0) {
        if (pos >= 0) {
          throw new ParseException("More than one top-level '=' in atomic formula: " + s);
        }
        pos = i;
      }

      if (depth < 0) {
        throw new ParseException("Unbalanced parentheses in atomic formula: " + s);
      }
    }

    if (depth != 0) {
      throw new ParseException("Unbalanced parentheses in atomic formula: " + s);
    }

    return pos;
  }

  private String readAtomicText() throws ParseException {
    StringBuilder sb = new StringBuilder();
    int depth = 0;
    boolean sawSomething = false;

    while (true) {
      Token t = getToken(1);

      if (t.kind == EOF) {
        break;
      }

      if (depth == 0) {
        if (t.kind == AND || t.kind == OR || t.kind == IMPLIES || t.kind == RPAREN) {
          break;
        }
      }

      t = getNextToken();
      sawSomething = true;
      sb.append(t.image);

      if (t.kind == LPAREN) depth++;
      else if (t.kind == RPAREN) depth--;

      if (depth < 0) {
        throw new ParseException("Too many closing parentheses in atomic formula");
      }
    }

    if (!sawSomething) {
      throw new ParseException("Expected atomic formula");
    }

    if (depth != 0) {
      throw new ParseException("Unbalanced parentheses in atomic formula");
    }

    return sb.toString().trim();
  }

/* ---------- entry ---------- */
  final public 
FOFormula Formula() throws ParseException {FOFormula f;
    f = ImplicationFormula();
{if ("" != null) return f;}
    throw new Error("Missing return statement in function");
}

  final public Sentence SentenceFormula() throws ParseException {FOFormula f;
    f = Formula();
{if ("" != null) return new Sentence(f);}
    throw new Error("Missing return statement in function");
}

/* ---------- precedence ---------- */
  final public 
FOFormula ImplicationFormula() throws ParseException {FOFormula left;
  FOFormula right;
    left = DisjunctionFormula();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IMPLIES:{
      jj_consume_token(IMPLIES);
      right = ImplicationFormula();
left = new Implication(left, right);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public FOFormula DisjunctionFormula() throws ParseException {FOFormula left;
  FOFormula right;
    left = ConjunctionFormula();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(OR);
      right = ConjunctionFormula();
left = new Disjunction(left, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public FOFormula ConjunctionFormula() throws ParseException {FOFormula left;
  FOFormula right;
    left = UnaryFormula();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(AND);
      right = UnaryFormula();
left = new Conjunction(left, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  final public FOFormula UnaryFormula() throws ParseException {FOFormula f;
  Variable v;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      f = UnaryFormula();
{if ("" != null) return new Negation(f);}
      break;
      }
    case FORALL:{
      jj_consume_token(FORALL);
      v = VariableToken();
      f = UnaryFormula();
{if ("" != null) return new ForAll(v, f);}
      break;
      }
    case EXISTS:{
      jj_consume_token(EXISTS);
      v = VariableToken();
      f = UnaryFormula();
{if ("" != null) return new Exists(v, f);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      f = Formula();
      jj_consume_token(RPAREN);
{if ("" != null) return f;}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      f = AtomicFormula();
{if ("" != null) return f;}
    }
    throw new Error("Missing return statement in function");
}

  final public Variable VariableToken() throws ParseException {Token t;
    t = jj_consume_token(IDENT);
{if ("" != null) return new VariableImp(t.image);}
    throw new Error("Missing return statement in function");
}

  final public FOFormula AtomicFormula() throws ParseException {String s;
s = readAtomicText();
    {if ("" != null) return makeEquationFormula(s);}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public FOParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x400,0x200,0x100,0x10e0,};
	}

  /** Constructor with InputStream. */
  public FOParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public FOParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new FOParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public FOParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new FOParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new FOParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public FOParser(FOParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(FOParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[16];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 4; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 16; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
